fix locals
